belum ada perkalian galois fieldnya

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\anang ferdi\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+user.properties.file=C:\\Users\\Arief Yudha Satria\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
